# porouspromptbo

./: .gitignore  CITATION.cff  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
data/: building_blocks.csv  literature_snippets.jsonl
docs/: index.html
docs/assets/: app.js  building_blocks.json  experiments.json  model.json  style.css
src/porouspromptbo/: agent.py  bo.py  cli.py  data.py  design_space.py  features.py  llm_retrieval.py  models.py  simulator.py  utils.py
src/porouspromptbo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
